# clickup-cli

./: CLAUDE.md  README.md  pyproject.toml
.serena/: project.yml
docs/plans/: 2026-02-13-clickup-cli-design.md  2026-02-13-clickup-cli-plan.md  2026-02-19-task-view-assignee-design.md  2026-02-19-task-view-assignee.md
src/clickup_cli/: __init__.py  cli.py  client.py  config.py  formatting.py  helpers.py  models.py
src/clickup_cli/commands/: alias.py  config_cmd.py  folder.py  list.py  space.py  task.py
